<resources>
    <string name="app_name">GitProject</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcomeback">WelcomeBack</string>
    <string name="log_in">Log In !</string>
    <string name="or_sign_in_with">Or Sign In With</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account ? Sign Up</string>
    <string name="remember_me">Remember me</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="todo">TODO</string>
    <string name="textname">Let\'Go</string>
</resources>
